--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.java.home=G:\\Programm files\\JDK 17
 org.gradle.warning.mode=all
+
+mc_version=1.19.2
+jei_version=11.4.0.286
